docs: feedback and updated how it works

--- a/docs/intro.asciidoc
+++ b/docs/intro.asciidoc
@@ -7,19 +7,23 @@ endif::[]
 == Introduction
 
 The Elastic APM .NET Agent automatically measures the performance of your application and tracks errors.
-It has built-in support for the most popular frameworks and routers,
+It has built-in support for the most popular frameworks,
 as well as a simple API which allows you to instrument any application.
 
 [float]
 [[how-it-works]]
 === How does the Agent work?
 
-The agent auto-instruments <<supported-technologies,supported technologies>> and records interesting events,
-like HTTP requests and database queries. To do this, it uses built in capabilities of the instrumented frameworks like [Diagnostic Source](https://docs.microsoft.com/en-us/dotnet/api/system.diagnostics.diagnosticsource?view=netcore-3.0), an HTTP module for IIS, or [IDbCommandInterceptor](https://docs.microsoft.com/en-us/dotnet/api/system.data.entity.infrastructure.interception.idbcommandinterceptor?view=entity-framework-6.2.0) for Entity Framework.
-This means that for the supported technologies, there are no code changes required.
+The agent auto-instruments <<supported-technologies,supported technologies>> and records interesting events, like HTTP requests and database queries.
+To do this, it uses built-in capabilities of the instrumented frameworks like
+https://docs.microsoft.com/en-us/dotnet/api/system.diagnostics.diagnosticsource?view=netcore-3.0[Diagnostic Source],
+an HTTP module for IIS, or
+https://docs.microsoft.com/en-us/dotnet/api/system.data.entity.infrastructure.interception.idbcommandinterceptor?view=entity-framework-6.2.0[IDbCommandInterceptor] for Entity Framework.
+This means that for the supported technologies, there are no code changes required beyond enabling <<setup,auto-instrumentation>>.
 
-The Agent automatically registers callback methods for these built in Diagnostic Source events - or in case of the IIS HTTP module as described on the <<setup,Set up the Agent page>>, the user needs to register the module. With this, the supported frameworks trigger agent code for relevant events to measures their duration and collects metadata (like DB statements), as well as HTTP related information (like the URL, parameters, and headers).
-
+The Agent automatically registers callback methods for built-in Diagnostic Source events.
+The IIS HTTP module, as described in <<setup-asp-net, Set up ASP.net Core>>, will need to be registered.
+With this, the supported frameworks trigger Agent code for relevant events to measure their duration and collect metadata, like DB statements, as well as HTTP related information, like the URL, parameters, and headers.
 These events, called Transactions and Spans, are sent to the APM Server.
 The APM Server converts them to a format suitable for Elasticsearch, and sends them to an Elasticsearch cluster.
 You can then use the APM app in Kibana to gain insight into latency issues and error culprits within your application.
