--- a/docs/supported-technologies.asciidoc
+++ b/docs/supported-technologies.asciidoc
@@ -89,14 +89,14 @@ We support automatic instrumentation for the following data access technologies.
 
 | Elasticsearch (Elasticsearch.Net and NEST)
 | 7.6.0
-| 
+| __If you're using 7.10.1 or 7.11.0, upgrade to at least 7.11.1 which fixes a bug in capture__
 | 1.6.0
-|===
 
 | Redis (StackExchange.Redis)
 | 2.0.495
 | A DB span is automatically created for each profiled redis command peformed by StackExchange.Redis 
 | 1.8.0
+|===
 
 [float]
 [[supported-networking-client-side-technologies]]
